# cloudbanking

./: .all-contributorsrc  .dockerignore  .drone.yml  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.account  Dockerfile.card  Dockerfile.core  Jenkinsfile  README.md  Vagrantfile  azure-pipelines.yml  buddy.yml  cc.yaml  docker-compose.yml  init.sh  local.provision  make.toml  makefile  openrc.sh  provision.yaml  taurus_benh.yml  test-cases.json
.cache/cargo-make/: cache.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CheckPRBody.yml  cc_check_cc.yaml.yml  cd.yml  cd_are_microservices_ok.yml  cd_client.yml  cd_servers.yml  check-docker-image.yml  check_cc.yaml.yml  ci_docker_builds_push.yml  ci_test.yml  delivery.yml  deliveryclient.yml  main.yml  procesa_yaml.sh  rust.yml  sube-config.yaml  testapi.yml
.metals/: metals.h2.db
account/: .env  Cargo.toml
account/src/: main.rs
account/src/bankaccount_module/: controller.rs  mod.rs  model.rs  routes_handlers.rs  test.rs  test_galvanic.rs
account/src/utils/: model.rs  test_galvanic.rs
card/: .env  Cargo.toml  Dockerfile.cards  jester_cards.nimble
card/src/: jester_cards.nim  main.rs
client/: .env  .eslintcache  index.js  manifest.yml  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  Routes.js  index.js
conf/: nginx.conf
docs/: dirtree.html  environmentConfiguration.md  feasibility-study.md  functionality.md  index-en.md  index.md  problem-description.md  project-rust-setup.md  proyect_structure.md  roadmap.md  tecnology-architecture-description.md  tecnology-architecture.md  test-justify.md  viabilidad-estudio.md
docs/2/: assertion_library_justification.md  hu_advance.md  task_manager_justification.md  test_files_and_enhacements.md  test_frame_justification.md
docs/3/: index-h3.md  r1.md  r2.md  r3.md  r4.md  r5.md  r6.md  r7.md
docs/4/: r1.md  r2.md  r3.md  r4.md  r5.md
docs/5/: r1.md  r2.md  r3.md  r4-5.md  r4.md
docs/6/: 1.md
docs/documentation/: search-index.js  settings.html  source-files.js
funds/: .gitignore  README.md  pom.xml
loans/: .env  index.js  loans.Dockerfile  package-lock.json  package.json  pm2.json
loans/controllers/: loansController.js
loans/models/: loan.js
loans/routes/: loans.js
src/: main.rs
src/bankaccount/: mod.rs  model.rs  test.rs  test_galvanic.rs
src/bankcard/: model.rs  test_galvanic.rs
src/bankfund/: model.rs  test_galvanic.rs
src/controller/: handler.rs  middleware.rs  mod.rs  model.rs  routes_handlers.rs  test.rs  test_actix.rs
src/json/: helpers.rs
src/paymentgroup/: model.rs
src/savinggroup/: model.rs
src/user/: mod.rs  model.rs  test.rs  test_galvanic.rs
src/utils/: test.rs  (+2 more)
(+12319 files in other folders)
