[package]
name = "CloudBanking"
version = "0.2.0"
authors = ["José Antonio Córdoba Gómez <joseinn@correo.ugr.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.22", features = ["macros"] }
chrono = { version = "0.4.6", features = ["serde"] }
