[package]
name = "cloudbanking"
version = "0.5.0"
authors = ["José Antonio Córdoba Gómez <joseinn@correo.ugr.es> @pepitoenpeligro"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.59"
regex = "1.4.1"
tokio = { version = "0.3.6", features = ["macros", "full"] }
chrono = { version = "0.4.6", features = ["serde"] }
galvanic-assert = "0.8.7"

futures = "0.3.1"

actix-web = { version = "3.3.2", features = ["openssl"]}
actix-cors = "0.5.3"
actix-session = "0.4.0"
actix = "0.10.0"
actix-service = "1.0.5"
actix-rt = "1.1.1"

openssl = { version = "0.10", features = ["v110"] }

etcd-client = "0.5"

hyper = "0.13.9"


env_logger = "0.8.2"
log = { version = "0.4", features = ["std", "serde"] }
dotenv = "0.15.0"

[profile.dev] 
debug = 0