[package]
name = "account"
version = "0.1.0"
authors = ["José Antonio Córdoba Gómez <joseinn@correo.ugr.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.59"
regex = "1.4.1"
tokio = { version = "0.2.22", features = ["macros", "full"] }
chrono = { version = "0.4.6", features = ["serde"] }
galvanic-assert = "0.8.7"

futures = "0.3.1"




etcd-client = "0.5"


env_logger = "0.8.2"
log = { version = "0.4", features = ["std", "serde"] }
dotenv = "0.15.0"

[profile.dev]
debug = 0